fix chat overlapping header on golive mobile

--- a/app/styles/_golive.scss
+++ b/app/styles/_golive.scss
@@ -216,6 +216,9 @@ body.fullscreen .mainWrapper {
     max-height: 180px;
     overflow-y: scroll;
     & > li + li { margin-top: 10px;}
+    &.commenting {
+      max-height: 60px !important;
+    }
   }
   .feed-comment {
     color: #fff;
